<resources>

    <string name="app_name">Kuiper</string>
    <string name="UserNameLogin">Username</string>
    <string name="PasswordLogin">Password</string>
    <string name="submit">LOG IN</string>
    <string name="txt_Forgot">Forgot your login details?</string>
    <string name="txt_register">Dont have an account? Register Now</string>
    <string name="txt_sign_out">Sign out</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_email">E-mail address</string>
    <string name="PasswordLogin_repeat">Repeat Password</string>
    <string name="btn_register">Sign up</string>
    <string name="condition_register">I own at least one vehicle</string>


    <string name="facebook_app_id">552186395322787</string>
    <string name="fb_login_protocol_scheme">fb552186395322787</string>
    <string name="txtMobileReg">Mobile</string>
    <string name="title_activity_main_view">MainViewActivity</string>
    <string name="tab_text_1">Vehicles</string>
    <string name="tab_text_2">Account</string>
    <string name="btn_Add">Add</string>
    <string name="driverName">Driver Name</string>
    <string name="make">Make of Vehicle</string>
    <string name="year">Year</string>
    <string name="model">Model</string>
    <string name="colorVehicle">Color</string>
    <string name="licencePlate">Licence Plate</string>
    <string name="driverLicence">Driver Licence</string>
    <string name="VIN">VIN or Reference Vehicle</string>
    <string name="TypeVehicle">Type Vehicle (Truck,Sedan,Van,Bus...)</string>
    <string name="title_activity_maps">Map</string>
    <string name="txtvModelVH">Model</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtvMakeVH">Make</string>
    <string name="Route">ROUTE</string>
    <string name="txtvOwner">Owner</string>
    <string name="txtSelect">Select</string>
    <string name="txtvDriver">Driver</string>


</resources>
