<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Activity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp"
        android:background="@color/backgroundAppLogin"
        android:orientation="vertical"
        android:gravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/logo1">
                </ImageView>

            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/UserNameInput"
                android:layout_marginTop="30dp"
                android:hint="@string/UserNameLogin"
                android:inputType="textAutoComplete"
                android:textColor="@color/txt_white"
                android:background="@drawable/edit_round"
                android:drawableLeft="@drawable/account"
                android:layout_height="45dp"/>
            <EditText
                android:layout_width="match_parent"
                android:id="@+id/PasswordInput"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_round"
                android:inputType="textPassword"
                android:textColor="@color/txt_white"
                android:hint="@string/PasswordLogin"
                android:drawableLeft="@drawable/lockopen"
                android:layout_height="45dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="match_parent"
                    android:text="@string/submit"
                    android:textColor="@color/btn_Submit_background_Text"
                    android:background="@drawable/button_round"
                    android:id="@+id/tv_submitLogin"
                    android:layout_marginTop="20dp"
                    android:layout_height="60dp"/>
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/txt_Forgot"
                    android:id="@+id/txtForgotPassword"
                    android:gravity="center"
                    android:textColor="@color/txt_white"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

           <!-- <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <com.facebook.login.widget.LoginButton
                    android:layout_gravity="center"
                    android:id="@+id/btn_loginFacebook"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>-->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="124dp"
                android:layout_marginTop="90dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_register"
                    android:onClick="onClickLogintxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/txt_register"
                    android:textColor="@color/txt_white" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>